take scene xml path as a command line argument

--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -6,7 +6,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}\\raytracer.exe",
-        "args": [],
+        "args": ["${workspaceFolder}\\..\\scenes\\input01.xml"],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
         "environment": [],
